PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-60-erreur_arithm/gcc-compile.txt
input.c: In function ‘main’:
input.c:6:16: error: lvalue required as left operand of assignment
    6 |     res = (10*a=b)/(3*c*20+5);
      |                ^

return code: 1
